--- a/.github/workflows/main_bcso-esri-events.yml
+++ b/.github/workflows/main_bcso-esri-events.yml
@@ -73,4 +73,6 @@ jobs:
         with:
           app-name: 'bcso-esri-events'
           slot-name: 'Production'
+          package: .
+
           
